--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Gokulesh</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="g2.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
-   <img class="top-cloud"src="css/cloud.png" alt="cloud">
+   <img class="top-cloud"src="cloud.png" alt="cloud">
     <h1>I'm Gokulesh</h1>
     <h2>a passionate coder</h2>
-    <img class="bottom-cloud"src="css/cloud.png" alt="cloud">
-    <img src="css/mountain.png" alt="mountain">
+    <img class="bottom-cloud"src="cloud.png" alt="cloud">
+    <img src="mountain.png" alt="mountain">
 
 
     <div class="middle-container">
@@ -25,7 +25,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="computer" src="css/computer.png" alt="computer">
+          <img class="computer" src="computer.png" alt="computer">
           <h3>Programming Languages</h3>
           <ol class="ol">
             <li>Python</li>
@@ -37,7 +37,7 @@
 
         </div>
         <div class="skill-row">
-          <img class="chillies" src="css/chillies.png" alt="chillies">
+          <img class="chillies" src="chillies.png" alt="chillies">
           <h3>Hot Wings Challenge</h3>
           <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
