--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <img class="top-cloud"src="cloud.png" alt="cloud">
     <h1>I'm Gokulesh</h1>
     <h2>a passionate coder</h2>
-    <img class="bottom-cloud"src="cloud.png" alt="cloud">
+    <img class="bottom-cloud"src="/cloud.png" alt="cloud">
     <img src="mountain.png" alt="mountain">
 
 
